--- a/config.yaml
+++ b/config.yaml
@@ -72,6 +72,8 @@ pv_opt:
   entity_id_timed_charge_start_minutes:  number.solis_timed_charge_start_minutes
   entity_id_timed_charge_end_hours:      number.solis_timed_charge_end_hours 
   entity_id_timed_charge_end_minutes:    number.solis_timed_charge_end_minutes
+  entity_id_timed_charge_discharge_button: button.solis_update_charge_discharge_times
+
   # ========================================
   # Solcast configuration
   # ========================================
