--- a/config.yaml
+++ b/config.yaml
@@ -76,6 +76,13 @@ pv_opt:
   entity_id_timed_charge_end_hours:      number.solis_timed_charge_end_hours 
   entity_id_timed_charge_end_minutes:    number.solis_timed_charge_end_minutes
   entity_id_timed_charge_current:    number.solis_timed_charge_current
+
+  entity_id_timed_discharge_start_hours:     number.solis_timed_discharge_start_hours
+  entity_id_timed_discharge_start_minutes:  number.solis_timed_discharge_start_minutes
+  entity_id_timed_discharge_end_hours:      number.solis_timed_discharge_end_hours 
+  entity_id_timed_discharge_end_minutes:    number.solis_timed_discharge_end_minutes
+  entity_id_timed_discharge_current:    number.solis_timed_discharge_current
+
   entity_id_timed_charge_discharge_button: button.solis_update_charge_discharge_times
   entity_id_inverter_mode: select.solis_energy_storage_control_switch
 
