--- a/config.yaml
+++ b/config.yaml
@@ -70,29 +70,29 @@ pv_opt:
     - sensor.solis_battery_voltage
     - 52
 
-  entity_id_battery_soc: sensor.solis_battery_soc
-  entity_id_timed_charge_start_hours:     number.solis_timed_charge_start_hours
-  entity_id_timed_charge_start_minutes:  number.solis_timed_charge_start_minutes
-  entity_id_timed_charge_end_hours:      number.solis_timed_charge_end_hours 
-  entity_id_timed_charge_end_minutes:    number.solis_timed_charge_end_minutes
-  entity_id_timed_charge_current:    number.solis_timed_charge_current
+  id_battery_soc: sensor.solis_battery_soc
+  id_timed_charge_start_hours:     number.solis_timed_charge_start_hours
+  id_timed_charge_start_minutes:  number.solis_timed_charge_start_minutes
+  id_timed_charge_end_hours:      number.solis_timed_charge_end_hours 
+  id_timed_charge_end_minutes:    number.solis_timed_charge_end_minutes
+  id_timed_charge_current:    number.solis_timed_charge_current
 
-  entity_id_timed_discharge_start_hours:     number.solis_timed_discharge_start_hours
-  entity_id_timed_discharge_start_minutes:  number.solis_timed_discharge_start_minutes
-  entity_id_timed_discharge_end_hours:      number.solis_timed_discharge_end_hours 
-  entity_id_timed_discharge_end_minutes:    number.solis_timed_discharge_end_minutes
-  entity_id_timed_discharge_current:    number.solis_timed_discharge_current
+  id_timed_discharge_start_hours:     number.solis_timed_discharge_start_hours
+  id_timed_discharge_start_minutes:  number.solis_timed_discharge_start_minutes
+  id_timed_discharge_end_hours:      number.solis_timed_discharge_end_hours 
+  id_timed_discharge_end_minutes:    number.solis_timed_discharge_end_minutes
+  id_timed_discharge_current:    number.solis_timed_discharge_current
 
-  entity_id_timed_charge_discharge_button: button.solis_update_charge_discharge_times
-  entity_id_inverter_mode: select.solis_energy_storage_control_switch
+  id_timed_charge_discharge_button: button.solis_update_charge_discharge_times
+  id_inverter_mode: select.solis_energy_storage_control_switch
 
   # ========================================
   # Solcast configuration
   # ========================================
   #
   solcast_integration: true 
-  entity_id_solcast_today: sensor.solcast_pv_forecast_forecast_today
-  entity_id_solcast_tomorrow: sensor.solcast_pv_forecast_forecast_tomorrow
+  id_solcast_today: sensor.solcast_pv_forecast_forecast_today
+  id_solcast_tomorrow: sensor.solcast_pv_forecast_forecast_tomorrow
 
   # ========================================
   # Solar and consumption forecast parameters
@@ -115,7 +115,7 @@ pv_opt:
   consumption_from_entity: 
     - input_boolean.solar_opt_consumption_from_entity
     - true
-  entity_id_consumption: 
+  id_consumption: 
     - sensor.solis_house_load
     - sensor.solis_bypass_load
   consumption_history_days: 
