--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -12,8 +12,8 @@ pv_opt:
   class: PVOpt
   log: pv_opt_log
   prefix: pvopt
-  inverter_type: "SOLIS_SOLAX_MODBUS"
-  # inverter_type: "SOLIS_CORE_MODBUS"
+  # inverter_type: "SOLIS_SOLAX_MODBUS"
+  inverter_type: "SOLIS_CORE_MODBUS"
 
   # User configuration ---  EDIT AWAY! ---
 
