--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -12,8 +12,8 @@ pv_opt:
   class: PVOpt
   log: pv_opt_log
   prefix: pvopt
-  inverter_type: "SOLIS_SOLAX_MODBUS"
-  # inverter_type: "SOLIS_CORE_MODBUS"
+  # inverter_type: "SOLIS_SOLAX_MODBUS"
+  inverter_type: "SOLIS_CORE_MODBUS"
 
   # User configuration ---  EDIT AWAY! ---
 
@@ -113,30 +113,29 @@ pv_opt:
   #
   # These are the default entities used with the Solis Core Modbus integration. You can change them here and over-ride the defaults
 
-  # modbus_hub: solis
-  # modbus_slave: 1
-  # battery_voltage: sensor.solis_battery_voltage
-  # maximum_dod_percent: sensor.solis_overdischarge_soc
-  #
-  # id_consumption:
-  #   - sensor.solis_house_load_power
-  #   - ensor.solis_backup_load_power
+  modbus_hub: solmod
+  modbus_slave: 1
+  battery_voltage: sensor.solmod_battery_voltage
+  maximum_dod_percent: sensor.solmod_overdischarge_soc
+  
+  id_consumption:
+    - sensor.solmod_house_load_power
+    - sensor.solmod_backup_load_power
 
-  # id_grid_power: sensor.solis_grid_active_power
-  # id_inverter_ac_power": sensor.solis_inverter_ac_power
-  # id_battery_soc: sensor.solis_battery_soc
+  id_grid_power: sensor.solmod_grid_active_power
+  id_inverter_ac_power": sensor.solmod_inverter_ac_power
+  id_battery_soc: sensor.solmod_battery_soc
 
-  # id_timed_charge_start_hours: sensor.solis_timed_charge_start_hour
-  # id_timed_charge_start_minutes: sensor.solis_timed_charge_start_minute
-  # id_timed_charge_end_hours: sensor.solis_timed_charge_end_hour
-  # id_timed_charge_end_minutes: sensor.solis_timed_charge_end_minute
-  # id_timed_charge_current: sensor.solis_timed_charge_current_limit
+  id_timed_charge_start_hours: sensor.solmod_timed_charge_start_hour
+  id_timed_charge_start_minutes: sensor.solmod_timed_charge_start_minute
+  id_timed_charge_end_hours: sensor.solmod_timed_charge_end_hour
+  id_timed_charge_end_minutes: sensor.solmod_timed_charge_end_minute
+  id_timed_charge_current: sensor.solmod_timed_charge_current_limit
 
-  # id_timed_discharge_start_hours: sensor.solis_timed_discharge_start_hour
-  # id_timed_discharge_start_minutes: sensor.solis_timed_discharge_start_minute
-  # id_timed_discharge_end_hours: sensor.solis_timed_discharge_end_hour
-  # id_timed_discharge_end_minutes: sensor.solis_timed_discharge_end_minute
-  # id_timed_discharge_current: sensor.solis_timed_discharge_current_limit
+  id_timed_discharge_start_hours: sensor.solmod_timed_discharge_start_hour
+  id_timed_discharge_start_minutes: sensor.solmod_timed_discharge_start_minute
+  id_timed_discharge_end_hours: sensor.solmod_timed_discharge_end_hour
+  id_timed_discharge_end_minutes: sensor.solmod_timed_discharge_end_minute
+  id_timed_discharge_current: sensor.solmod_timed_discharge_current_limit
 
-  # id_timed_charge_discharge_button: button.solis_update_charge_discharge_times
-  # id_inverter_mode: select.solis_energy_storage_control_switch
+  id_inverter_mode: sensor.solmod_energy_storage_control_switch
