--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -13,11 +13,12 @@ pv_opt:
   log: pv_opt_log
   prefix: pvopt
 
+# User configuration ---  EDIT AWAY! ---
+
   # inverter_type: "SOLIS_SOLAX_MODBUS"
   inverter_type: "SOLIS_CORE_MODBUS"
+  # inverter_type: SOLIS_SOLARMAN
   device_name: solmod
-
-  # User configuration ---  EDIT AWAY! ---
 
   # ========================================
   # Plant parameters
@@ -33,7 +34,6 @@ pv_opt:
   # charger_power_watts: 3500
   # inverter_power_watts: 3600
   # inverter_loss_watts: 100
-  # battery_voltage: sensor.solis_battery_voltage
   
   # ========================================
   # Solcast configuration
@@ -56,8 +56,7 @@ pv_opt:
 
   # solar_forecast:
   # - input_select.solar_forecast_source
-  #   - Solcast
-
+  
   # # consumption estimation
   # consumption_history_days:
   #   - 7
@@ -143,18 +142,19 @@ pv_opt:
   id_inverter_mode: sensor.{device_name}_energy_storage_control_switch
 
   # ==============================================================================================================
-  # Brand / Integration Specific Config: SOLIS_CORE_MODBUS: https://github.com/fboundy/ha_solis_modbus
+  # Brand / Integration Specific Config: SOLIS_SOLARMAN: https://github.com/StephanJoubert/home_assistant_solarman
   # ==============================================================================================================
   #
-  # These are the default entities used with the Solis Core Modbus integration. You can change them here and over-ride the defaults
+  # These are the default entities used with the Solis Solarman integration. You can change them here and over-ride the defaults
 
   # battery_voltage: sensor.{device_name}_battery_voltage
+  # maximum_dod_percent: 15
   
   # id_consumption:
   #   - sensor.{device_name}_house_load_power
   #   - sensor.{device_name}_backup_load_power
 
-  # id_grid_power: sensor.{device_name}_grid_active_power
+  # id_grid_power: sensor.{device_name}_meter_active_power
   # id_inverter_ac_power": sensor.{device_name}_inverter_ac_power
   # id_battery_soc: sensor.{device_name}_battery_soc
 
@@ -162,12 +162,12 @@ pv_opt:
   # id_timed_charge_start_minutes: sensor.{device_name}_timed_charge_start_minute
   # id_timed_charge_end_hours: sensor.{device_name}_timed_charge_end_hour
   # id_timed_charge_end_minutes: sensor.{device_name}_timed_charge_end_minute
-  # id_timed_charge_current: sensor.{device_name}_timed_charge_current_limit
+  # id_timed_charge_current: sensor.{device_name}_timed_charge_current
 
   # id_timed_discharge_start_hours: sensor.{device_name}_timed_discharge_start_hour
   # id_timed_discharge_start_minutes: sensor.{device_name}_timed_discharge_start_minute
   # id_timed_discharge_end_hours: sensor.{device_name}_timed_discharge_end_hour
   # id_timed_discharge_end_minutes: sensor.{device_name}_timed_discharge_end_minute
-  # id_timed_discharge_current: sensor.{device_name}_timed_discharge_current_limit
+  # id_timed_discharge_current: sensor.{device_name}_timed_discharge_current
 
-  # id_inverter_mode: sensor.{device_name}_energy_storage_control_switch
+  # id_inverter_mode: sensor.{device_name}_storage_control_mode
