--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -72,7 +72,7 @@ pv_opt:
   # Octopus account parameters
   # ========================================
 
-  # octopus_auto: False # Read tariffs from the Octopus Energy integration. If successful this over-rides the following parameters
+  octopus_auto: False # Read tariffs from the Octopus Energy integration. If successful this over-rides the following parameters
 
   # octopus_account: !secret octopus_account
   # octopus_api_key: !secret octopus_api_key
@@ -82,8 +82,8 @@ pv_opt:
   # octopus_import_tariff_code: E-2R-VAR-22-11-01-G
   # octopus_export_tariff_code: E-1R-AGILE-OUTGOING-19-05-13-G
 
-  # octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
-  # octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
+  octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
+  octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
   
   # ===============================================================================================================
   # Brand / Integration Specific Config: SOLIS_SOLAX_MODBUS: https://github.com/wills106/homeassistant-solax-modbus
