--- a/pvopt_dashboard.yaml
+++ b/pvopt_dashboard.yaml
@@ -3,7 +3,7 @@ views:
     title: PV Opt
     path: pv_opt
     subview: false
-    type: custom:horizontal-layout
+    type: custom:masonry-layout
     layout:
       max_cols: 4
       reflow: true
@@ -12,51 +12,99 @@ views:
     cards:
       - type: vertical-stack
         cards:
-          - type: vertical-stack
-            cards:
-              - type: custom:bar-card
-                title: Status
-                entities:
-                  - entity: sensor.solis_pv_total_power
-                    unit_of_measurement: W
-                    target: '{{states(''sensor.solcast_forecast_today'')}}'
-                    name: Solar
-                    max: 5000
-                    icon: mdi:solar-power-variant
-                  - entity: sensor.solis_house_load
-                    name: Load
-                    max: 5000
-                  - entity: sensor.solis_battery_soc
-                    name: SOC
-                    max: 100
-                    icon: mdi:battery
-                  - entity: sensor.solis_grid_import_power
-                    name: Import Power
-                    max: 5000
-                    min: 0
-                  - entity: sensor.solis_grid_export_power
-                    name: Export Power
-                    max: 5000
-                    min: 0
-                  - entity: sensor.solis_battery_output_energy
-                    name: Battery Discharge
-                    max: 5000
-                    min: 0
-                  - entity: sensor.solis_battery_input_energy
-                    name: Battery Charge
-                    max: 5000
-                    min: 0
-              - type: entities
-                entities:
-                  - type: custom:template-entity-row
-                    name: Inverter Time
-                    state: >-
-                      {{((as_local(as_datetime(states('sensor.solis_rtc'))))|string)[11:16]}}
-                  - type: custom:template-entity-row
-                    name: Time
-                    state: >-
-                      {{(as_local(as_datetime(states('sensor.date_time_iso')))|string)[11:16]}}
-                  - entity: button.solis_sync_rtc
+          - type: custom:bar-card
+            title: Status
+            entities:
+              - entity: sensor.solis_pv_total_power
+                unit_of_measurement: W
+                target: '{{states(''sensor.solcast_forecast_today'')}}'
+                name: Solar
+                max: 5000
+                icon: mdi:solar-power-variant
+              - entity: sensor.solis_house_load
+                name: Load
+                max: 5000
+              - entity: sensor.solis_battery_soc
+                name: SOC
+                max: 100
+                icon: mdi:battery
+              - entity: sensor.solis_grid_import_power
+                name: Import Power
+                max: 5000
+                min: 0
+              - entity: sensor.solis_grid_export_power
+                name: Export Power
+                max: 5000
+                min: 0
+              - entity: sensor.solis_battery_output_energy
+                name: Battery Discharge
+                max: 5000
+                min: 0
+              - entity: sensor.solis_battery_input_energy
+                name: Battery Charge
+                max: 5000
+                min: 0
+          - type: entities
+            entities:
+              - type: custom:template-entity-row
+                name: Inverter Time
+                state: >-
+                  {{((as_local(as_datetime(states('sensor.solis_rtc'))))|string)[11:16]}}
+              - type: custom:template-entity-row
+                name: Time
+                state: >-
+                  {{(as_local(as_datetime(states('sensor.date_time_iso')))|string)[11:16]}}
+              - entity: button.solis_sync_rtc
+          - type: markdown
+            content: >
+              <h3><u>Cost Summary (GBP)</u></h3>
+
+
+              | | Today | Tomorrow | Total |
+
+              |:--|---:|---:|---:|
+
+              |Base | {{'%0.2f' |
+              format(state_attr('sensor.pvopt_base_cost','cost_today')| float)}}
+              | {{'%0.2f' |
+              format(state_attr('sensor.pvopt_base_cost','cost_tomorrow')|
+              float)}} |  {{'%0.2f' | format(states('sensor.pvopt_base_cost')|
+              float)}} |  
+
+              |Optimised | {{'%0.2f' |
+              format(state_attr('sensor.pvopt_opt_cost','cost_today')| float)}}
+              | {{'%0.2f' |
+              format(state_attr('sensor.pvopt_opt_cost','cost_tomorrow')|
+              float)}} |  {{'%0.2f' | format(states('sensor.pvopt_opt_cost')|
+              float)}} |  
+
+              |<b>Cost Saving</b> | <b>{{'%0.2f' |
+              format((state_attr('sensor.pvopt_base_cost','cost_today')|
+              float-state_attr('sensor.pvopt_opt_cost','cost_today')| float) |
+              round(2))}}</b> |<b>{{'%0.2f' |
+              format((state_attr('sensor.pvopt_base_cost','cost_tomorrow')|
+              float-state_attr('sensor.pvopt_opt_cost','cost_tomorrow')| float)
+              | round(2))}} </b> |<b>  {{'%0.2f' |
+              format((states('sensor.pvopt_base_cost')| float -
+              states('sensor.pvopt_opt_cost')| float) | round(2)) }}</b> |  
+
+
+              <h3><u>Charge Plan</u></h3>
+
+
+              | Start | | | End ||| Power ||| Start SOC ||| End SOC | Hold SOC
+              | 
+
+              |:-------|--|--|:---------|--|--|:--------:|--|--|:--------:|--|--|:----------:|:--|{%
+              for a in state_attr('sensor.pvopt_charge_start', 'windows') %}
+
+              {% set tf = '%d-%b %H:%M'%} | 
+              {{as_local(as_datetime(a['start'])).strftime(tf)}}    |||
+              {{as_local(as_datetime(a['end'])).strftime(tf)}} ||| {{a['forced']
+              | float | round(0)}}W ||| {{a['soc'] | float | round(1)}}% |||
+              {{a['soc_end'] | float | round(1)}}% | {{a['hold_soc']}}
+              |{%endfor%}
+            title: PV Opt Results
       - type: custom:stack-in-card
         title: Optimised Charging
         cards:
@@ -72,12 +120,24 @@ views:
                 name: Optimise Charging
               - entity: switch.pvopt_forced_discharge
                 name: Optimise Discharging
+              - entity: switch.pvopt_allow_cyclic
+                name: Allow Cyclic Charge/Discharge
               - entity: switch.pvopt_read_only
                 name: Read Only Mode
               - entity: select.pvopt_solar_forecast
                 name: Solar Forecast to Use
               - entity: number.pvopt_optimise_frequency_minutes
-                name: PV Optimiser Frequency (Minutes)
+                name: Optimiser Freq (mins)
+          - type: markdown
+            content: Tuning Parameters
+          - type: entities
+            entities:
+              - entity: number.pvopt_pass_threshold_p
+                name: Threshold per pass  (p)
+              - entity: number.pvopt_slot_threshold_p
+                name: Threshold per slot (p)
+              - entity: number.pvopt_forced_power_group_tolerance
+                name: Power Resolution
               - entity: number.pvopt_consumption_history_days
                 name: Load History Days
               - entity: number.pvopt_consumption_margin
@@ -96,30 +156,32 @@ views:
                 name: Inverter Efficiency
               - entity: number.pvopt_charger_efficiency_percent
                 name: Charger Efficiency
-          - type: markdown
-            content: Results
-          - type: entities
-            entities:
-              - entity: sensor.solis_battery_soc
-                name: Current Battery SOC
-              - type: custom:template-entity-row
-                name: Next Charge/Discharge Slot Start
-                state: >-
-                  {{(as_local(as_datetime(states('sensor.pvopt_charge_start')))|string)[:16]}}
-                icon: mdi:timer-sand-complete
-              - type: custom:template-entity-row
-                name: Next Charge/Discharge Slot End
-                state: >-
-                  {{(as_local(as_datetime(states('sensor.pvopt_charge_end')))|string)[:16]}}
-                icon: mdi:timer-sand-complete
-              - entity: sensor.pvopt_charge_current
-                name: Optimum Charge Current
-              - entity: sensor.solis_battery_current
-                name: Battery Current
-            state_color: true
-            show_header_toggle: false
-      - type: vertical-stack
+      - type: custom:stack-in-card
         cards:
+          - type: vertical-stack
+            cards:
+              - type: markdown
+                content: Results
+              - type: entities
+                entities:
+                  - entity: sensor.solis_battery_soc
+                    name: Current Battery SOC
+                  - type: custom:template-entity-row
+                    name: Next Charge/Discharge Slot Start
+                    state: >-
+                      {{(as_local(as_datetime(states('sensor.pvopt_charge_start')))|string)[:16]}}
+                    icon: mdi:timer-sand-complete
+                  - type: custom:template-entity-row
+                    name: Next Charge/Discharge Slot End
+                    state: >-
+                      {{(as_local(as_datetime(states('sensor.pvopt_charge_end')))|string)[:16]}}
+                    icon: mdi:timer-sand-complete
+                  - entity: sensor.pvopt_charge_current
+                    name: Optimum Charge Current
+                  - entity: sensor.solis_battery_current
+                    name: Battery Current
+                state_color: true
+            show_header_toggle: false
           - type: custom:apexcharts-card
             apex_config:
               chart:
@@ -371,7 +433,7 @@ views:
                      return [new Date(entry.period_start), entry.forced];
                    });
               - entity: >-
-                  event.octopus_energy_electricity_19m1337498_1610032016836_current_day_rates
+                  event.octopus_energy_electricity_19m1234567_1610012345678_current_day_rates
                 yaxis_id: price
                 name: Historic Import Price
                 color: yellow
@@ -388,7 +450,7 @@ views:
                   legend_value: false
                   offset_in_name: false
               - entity: >-
-                  event.octopus_energy_electricity_19m1337498_1650000216929_export_current_day_rates
+                  event.octopus_energy_electricity_19m1234567_1650012345678_export_current_day_rates
                 yaxis_id: price
                 name: Historic Export Price
                 color: cyan
@@ -439,51 +501,5 @@ views:
                   return entity.attributes.export.map((entry) => {
                      return [new Date(entry.period_start), entry.export];
                    });
-                yaxis_id: price
-      - type: markdown
-        content: >
-          <h3><u>Cost Summary (GBP)</u></h3>
-
-
-          | | Today | Tomorrow | Total |
-
-          |:--|---:|---:|---:|
-
-          |Base | {{'%0.2f' |
-          format(state_attr('sensor.pvopt_base_cost','cost_today')| float)}} |
-          {{'%0.2f' |
-          format(state_attr('sensor.pvopt_base_cost','cost_tomorrow')| float)}}
-          |  {{'%0.2f' | format(states('sensor.pvopt_base_cost')| float)}} |  
-
-          |Optimised | {{'%0.2f' |
-          format(state_attr('sensor.pvopt_opt_cost','cost_today')| float)}} |
-          {{'%0.2f' |
-          format(state_attr('sensor.pvopt_opt_cost','cost_tomorrow')| float)}}
-          |  {{'%0.2f' | format(states('sensor.pvopt_opt_cost')| float)}} |  
-
-          |<b>Cost Saving</b> | <b>{{'%0.2f' |
-          format((state_attr('sensor.pvopt_base_cost','cost_today')|
-          float-state_attr('sensor.pvopt_opt_cost','cost_today')| float) |
-          round(2))}}</b> |<b>{{'%0.2f' |
-          format((state_attr('sensor.pvopt_base_cost','cost_tomorrow')|
-          float-state_attr('sensor.pvopt_opt_cost','cost_tomorrow')| float) |
-          round(2))}} </b> |<b>  {{'%0.2f' |
-          format((states('sensor.pvopt_base_cost')| float -
-          states('sensor.pvopt_opt_cost')| float) | round(2)) }}</b> |  
-
-
-          <h3><u>Charge Plan</u></h3>
-
-
-          | Start | | | End ||| Power ||| Start SOC ||| End SOC |
-
-          |:-------|--|--|:---------|--|--|:--------:|--|--|:--------:|--|--|:----------:|{%
-          for a in state_attr('sensor.pvopt_charge_start', 'windows') %}
-
-          {% set tf = '%d-%b %H:%M'%} | 
-          {{as_local(as_datetime(a['start'])).strftime(tf)}}    |||
-          {{as_local(as_datetime(a['end'])).strftime(tf)}} ||| {{a['forced'] |
-          float | round(0)}}W ||| {{a['soc'] | float | round(1)}}% |||
-          {{a['soc_end'] | float | round(1)}}% |{%endfor%}
-        title: PV Opt Results
+                yaxis_id: price        
 title: PV Opt
